--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "chalk": "^1.1.1",
-    "inquirer": "^0.11.0",
+    "nedb": "^1.2.1",
     "prompt": "^0.2.14"
   },
   "devDependencies": {},
